# jina-clip-modal

./: model.py  pyproject.toml
